# web_pinger

./: .pre-commit-config.yaml  manage.py  pyproject.toml
cisco_django/: asgi.py  settings.py  urls.py  wsgi.py
django_project/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  webapp_entrypoint.sh
rest_app/: tests.py  views.py
