[tool.poetry]
name = "django_project"
version = "0.1.0"
description = "A basic Django RestFreamework app"
authors = ["Maciej 'Kasprzol' Kasprzyk <git_blame@kasprzyk.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
requests = "^2.27.1"
gunicorn = "^20.1.0"
PyYAML = "^6.0"
uritemplate = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylama = "^8.3.8"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
